Fixed the Delete buttons for the URLs and the Folders

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,10 @@
   "manifest_version": 2,
   "name": "Stashio",
   "options_page": "options.html",
-  "permissions": [ "tabs", "storage"],
+  "permissions": [
+    "tabs",
+    "storage"
+  ],
   "update_url": "https://clients2.google.com/service/update2/crx",
   "version": "1.0.0"
 }
