--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,10 @@
 {
-  "name": "Stashio",
-  "description": "Save tabs URL to your Stash. You don't have to open several tabs anymore. Keep important URLs in your Stash and come back to them anytime.",
+  "name": "Stashio [URL Saver]",
+  "short_name": "Stashio",
+  "description": "Save URLs to your Stash. You don't have to open several tabs anymore. Keep URLs in your Stash and come back to them anytime.",
   "icons": {
+    "32": "icons/logo_32.png",
+    "48": "icons/logo_48.png",
     "128": "icons/logo_128.png"
   },
   "options_page": "options.html",
@@ -13,12 +16,14 @@
     "scripts": [  ]
   },
   "browser_action": {
-    "default_icon": "icons/logo.png",
+    "default_icon": "icons/logo_48.png",
     "default_popup": "popup.html",
     "default_title": "Save URLs to your Stash"
   },
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "manifest_version": 2,
   "update_url": "https://clients2.google.com/service/update2/crx",
-  "version": "1.0.0"
+  "version": "1.0.1",
+  "author": "generaleye <odumuyiwaleye@gmail.com>",
+  "offline_enabled": true
+
 }
